--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -1,1 +1,1 @@
-Consider a system of $N$ interacting degrees of freedom subject to a global constraint; lying on an $N$ dimensional sphere of radius $N$. These degrees of f
+Consider a system of $N$ interacting degrees of freedom subject to a global constraint; lying on an $N$ dimensional sphere of radius $N$. These degrees of free
