--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -1,1 +1,1 @@
-Consider a system of $N$ interacting degrees of freedom subject to a global constraint; lying on an $N$-dimensional sphere of radius $N$. These degrees of freedom may also experience an external noise $\mathbf{\eta}(t)$ and 
+Consider a system of $N$ interacting degrees of freedom subject to a global constraint; lying on an $N$-dimensional sphere of radius $N$. These degrees of freedom may also experience an external noise $\mathbf{\eta}(t)$ and bias
