--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -1,1 +1,1 @@
-Consider a system of $N$ linearly interacting degrees of freedom - encoded by coupling matrix  subject to a global constraint; lying on an $N$-dimensional sphere of radius $N$. These degrees of freedom may also experience an external noise $\mathbf{n}(t)$ and bias $\mathbf{h}$. We begin by writing down the Langevin Equation of motion
+Consider a system of $N$ linearly interacting degrees of freedom - encoded by coupling matrix $$ subject to a global constraint; lying on an $N$-dimensional sphere of radius $N$. These degrees of freedom may also experience an external noise $\mathbf{n}(t)$ and bias $\mathbf{h}$. We begin by writing down the Langevin Equation of motion
