--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -1,5 +1,5 @@
 Consider a system of $N$ linearly interacting degrees of freedom. We collect them into a vector $\mathbf{\bar x}(t) = \left(\,x_1(t),\cdots, x_N(t)\,\right)$ and represent their interactions with random coupling matrix $\mathbf{J}(t)$. We subject them to a global constraint: lying on an $N$-dimensional sphere of radius $N$. These degrees of freedom may also experience an external noise $\mathbf{n}(t)$ and constant bias $\mathbf{h}$. We begin by writing down the Langevin Equation of motion
 
 \begin{align}
-\partial_t\mathbf{\bar x}(t) = (\mathbf{J}(t)-\mu(t))\mathbf{x}(t)
+\partial_t\mathbf{\bar x}(t) = (\mathbf{J}(t)-\mu(t))\mathbfx}(t)
 \end{align}
