--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -2,5 +2,5 @@ Consider a system of $N$ linearly interacting degrees of freedom. We collect the
 
 \begin{align}
 \partial_t\mathbf{\bar x}(t) = (\mathbf{J}(t)-\mu(t))\mathbf{\bar x}(t)+\mathbf{h}(t)+\boldsymbol\xi(t) \\
-\mathrm{where}\mu(t)=\frac{1}{N}\mathbf{x}^\quad|\mathbf{\bar x}(t)|^2=N
+\mathrm{where}\mu(t)=\frac{1}{N}\mathbf{x}^{\}\quad|\mathbf{\bar x}(t)|^2=N
 \end{align}
