--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -1,4 +1,4 @@
-Consider a system of $N$ linearly interacting degrees of freedom. We collect them into a vector $\mathbf{\bar x}(t) = \left(\,x_1(t),\cdots, x_N(t)\,\right)$ and represent their interactions with random coupling matrix $\mathbf{J}(t)$. We subject them to a global constraint: lying on an $N$-dimensional sphere of radius, dropping the explicit 
+Consider a system of $N$ linearly interacting degrees of freedom. We collect them into a vector $\mathbf{\bar x}(t) = \left(\,x_1(t),\cdots, x_N(t)\,\right)$ and represent their interactions with random coupling matrix $\mathbf{J}(t)$. We subject them to a global constraint: lying on an $N$-dimensional sphere of radius, dropping the explicit time depende
 
 \begin{align}
 \partial_t\mathbf{\bar x}(t) = (\mathbf{J}(t)-\mu(t))\mathbf{\bar x}(t)+\mathbf{h}(t)+\boldsymbol\xi(t) \\
