--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -2,5 +2,5 @@ Consider a system of $N$ linearly interacting degrees of freedom. We collect the
 
 \begin{align}
 \partial_t\mathbf{\bar x} &= (\mathbf{J}-\mu)\mathbf{\bar x}+\mathbf{h}+\boldsymbol\xi \\
-\mathrm{where}\quad\mu &= \frac{1}{N}\mathbf{\bar x}^{\top}\mathbf{J}\mathbf{\bar x}\quad|\mathbf{\bar x}(t)|^2=N
+\mathrm{where}\quad\mu &= \frac{1}{N}\le\mathbf{\bar x}^{\top}\mathbf{J}\mathbf{\bar x}\quad|\mathbf{\bar x}(t)|^2=N
 \end{align}
