--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -2,7 +2,7 @@ Consider a system of $N$ linearly interacting degrees of freedom. We collect the
 
 \begin{align}
 \partial_t\mathbf{\bar x} &= (\mathbf{J}-\mu)\mathbf{\bar x}+\mathbf{h}+\boldsymbol\xi
-\begin{align}
+\end{align}
 \begin{align}
 \text{where}\quad\mu &= \frac{1}{N}\mathbf{\bar x}^{\top}\left(\mathbf{J}\mathbf{\bar x}+\mathbf{h}+\xi\right)\quad\text{enforces constraint}\quad|\mathbf{\bar x}(t)|^2=N
 \end{align}
