--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -5,5 +5,5 @@ Consider a system of $N$ linearly interacting degrees of freedom. We collect the
 \end{align}
 
 \begin{align}
-\text{where}\quad\mu &= \frac{1}{N}\mathbf{\bar x}^{\top}\left(\mathbf{J}\mathbf{\bar x}+\mathbf{h}+\xi\right)\quad\text{enforces constraint}\quad|\mathbf{\bar x}(t)|^2=N
+\text{where}\quad\mu = \frac{1}{N}\mathbf{\bar x}^{\top}\left(\mathbf{J}\mathbf{\bar x}+\mathbf{h}+\xi\right)\quad\text{enforces constraint}\quad|\mathbf{\bar x}(t)|^2=N
 \end{align}
