--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -3,4 +3,4 @@ Consider a system of $N$ linearly interacting degrees of freedom. We collect the
 \begin{gather}
 \partial_t\mathbf{\bar x} = (\mathbf{J}-\mu)\mathbf{\bar x}+\mathbf{h}+\boldsymbol\xi \\
 \text{where}\quad\mu = \frac{1}{N}\mathbf{\bar x}^{\top}\left(\mathbf{J}\mathbf{\bar x}+\mathbf{h}+\xi\right)\quad\text{enforces constraint}\quad|\mathbf{\bar x}(t)|^2=N
-\end{align}
+\end{gather}
