--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -4,4 +4,4 @@ Consider a system of $N$ linearly interacting degrees of freedom. We collect the
 \partial_t\mathbf{\bar x} = (\mathbf{J}-\mu)\mathbf{\bar x}+\mathbf{h}+\boldsymbol\xi\quad\\
 \text{where}\quad\mu = \frac{1}{N}\mathbf{\bar x}^{\top}\left(\mathbf{J}\mathbf{\bar x}+\mathbf{h}+\boldsymbol\xi\right)\quad\text{enforces constraint}\quad|\mathbf{\bar x}(t)|^2=N
 \end{gather}
-\end{}
+\end{docu}
