--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -2,19 +2,31 @@
 \renewcommand{\baselinestretch}{1.5}
 
 \usepackage[affil-it]{authblk}
-\usepackage{graphicx}
 \usepackage[space]{grffile}
+
+\usepackage[a4paper]{geometry}
+\geometry{verbose}
+\usepackage{float}
+\usepackage{graphicx}
+\usepackage{setspace}
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 
 \usepackage{latexsym,textcomp,longtable,tabulary}
 \usepackage{booktabs,array,multirow}
-\usepackage{amsfonts,amsmath,amssymb,mathbbol}
+\usepackage{amsfonts,amsmath,amssymb,mathbbol,calc}
+\usepackage{subfigure,color,blindtext,enumitem,siunitx}
 
+\usepackage{mathtools}
 \usepackage{url,hyperref,etoolbox}
 \numberwithin{equation}{section}
 \hypersetup{colorlinks=false,pdfborder={0 0 0}}
+
+%+figure layout options
+\restylefloat{figure}
+\setlist{leftmargin=*,before=\setlength{\rightmargin}{\leftmargin}}
+%-figure layout options
 
 \providecommand\citet{\cite}
 \providecommand\citep{\cite}
@@ -126,4 +138,13 @@ $M$-dimensional hypercube region becomes $\Omega'=[-2,2]^M$.
 The tricky aspect of this integral writing down how the domain of integration
 $\Omega'\rightarrow\partial\Omega'(\Lambda_M)$ becomes of a function of $\Lambda_M$
 after using the delta function filtering property.
+\begin{figure}[H]
+\centering{}
+\includegraphics[scale=0.4]{figures/dos1}
+\includegraphics[scale=0.4]{figures/dos2}
+\caption{Isosurfaces of the integrand $M=3$ within the cubic integration
+region $\Omega'$ with delta constraint represented by a plane shifted from
+the origin by parameter $\Lambda_3$. This illustration }
+\label{fig:dos}
+\end{figure}
 \end{document}
