--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -53,15 +53,15 @@ dynamics of the Spherical Model
 
 \maketitle
 Consider a system of $N$ linearly interacting degrees of freedom. We collect
-them into a vector $\mathbf{\bar{s}}(t) = \left(\,s_1(t),\cdots, s_N(t)\,\right)$
+them into a vector $\bar{\mathbf{s}}(t) = \left(\,s_1(t),\cdots, s_N(t)\,\right)$
 and represent their interactions with random coupling matrix $\mathbf{J}(t)$.
 We subject them to a global constraint: lying on an $N$-dimensional sphere of
 radius $N$, enforced by lagrange multiplier $\mu$. We write down the
 Langevin Equation of motion with external noise $\boldsymbol\xi(t)$, dropping
 the explicit time dependence for brevity.
 \begin{gather}
-\partial_t\mathbf{\bar{s}} = (\mathbf{J}-\mu)\mathbf{\bar{s}}+\boldsymbol\xi\quad\\
-\text{where}\quad\mu = \frac{1}{N}\mathbf{\bar{s}}^{\top}\left(\mathbf{J}\mathbf{\bar{s}}+\boldsymbol\xi\right)\quad\text{enforces constraint}\quad|\mathbf{\bar{s}}(t)|^2=N
+\partial_t\bar{\mathbf{s}} = (\mathbf{J}-\mu)\bar{\mathbf{s}}+\boldsymbol\xi\quad\\
+\text{where}\quad\mu = \frac{1}{N}\bar{\mathbf{s}}^{\top}\left(\mathbf{J}\bar{\mathbf{s}}+\boldsymbol\xi\right)\quad\text{enforces constraint}\quad|\bar{\mathbf{s}}(t)|^2=N
 \end{gather}
 The following is an attempt to characterise the statistical differences between
 spatial and non-spatial interactions, and their effect on the equilibration
@@ -71,7 +71,7 @@ dynamics by introducting the discretised Laplacian $\Delta$ as a diffusive term.
 Here we follow the methods used to obtain exact solutions\cite{} in the
 field theoretic setting of the model.
 \begin{align*}
-  \mathbf{\bar{u}}(t)=\mathbb{e}^{\mathbf{\Lambda}t}\mathbf\Gamma^{1/2}\mathbf{\bar{u}}(0)
+  \bar{\mathbf{u}}(t)=\mathbb{e}^{\mathbf{\Lambda}t}\mathbf\Gamma^{1/2}\bar{\mathbf{u}}(0)
 \end{align*}
 \subsection{Spectra of Discrete Laplacians}
 Using the Circular Diagonalization Theorem~\cite{} one can derive the
@@ -108,27 +108,27 @@ The discrete $M$-dimensional laplacian is simply the kronecker sum of one
 dimensional cases $\mathbf\Delta=\mathbf X\oplus\mathbf X\oplus\cdots\oplus\mathbf X$
 and thus its eigenvalues is simply the sum one dimensional dispersions~\cite{}.
 \begin{align}
-  \lambda(\mathbf{\bar{x}})&=
-  -2\sum_{x\in\mathbf{\bar{x}}}\left(\cos x+1\right)
-  \quad \mathbf{\bar{x}}\in[-\pi,\pi]^M
+  \lambda(\bar{\mathbf{x}})&=
+  -2\sum_{x\in\bar{\mathbf{x}}}\left(\cos x+1\right)
+  \quad \bar{\mathbf{x}}\in[-\pi,\pi]^M
 \end{align}
 The probability density $\rho(\lambda)$ can be expressed as an integral
 over the region $\Omega=[-\pi,\pi]^M$ in complete analogue with the
 density of states.
 \begin{align*}
-  \rho(\lambda')&=\frac{1}{Z_M}\int_{\Omega}\!\delta(\lambda'-\lambda(\mathbf{\bar{x}}))\,\mathrm{d}\mathbf{\bar{x}}
+  \rho(\lambda')&=\frac{1}{Z_M}\int_{\Omega}\!\delta(\lambda'-\lambda(\bar{\mathbf{x}}))\,\mathrm{d}\bar{\mathbf{x}}
 \end{align*}
-We proceed with an element-wise change of variables $\mathbf{\bar{u}}=2\cos \mathbf{\bar{x}}$ and
+We proceed with an element-wise change of variables $\bar{\mathbf{u}}=2\cos \bar{\mathbf{x}}$ and
 recognise that the integration region is $M$-fold symmetric across each
 component axis, which allows restrict the domain of integration to a
-hyperoctant. Thus in the new coordinates $\mathbf{\bar{u}}$ the
+hyperoctant. Thus in the new coordinates $\bar{\mathbf{u}}$ the
 $M$-dimensional hypercube region becomes $\Omega'=[-2,2]^M$.
 \begin{align*}
   \rho(\lambda)&=\frac{1}{Z_M}
   \int_{\Omega'}\!
-  \frac{\delta(\Lambda_M+\sum_{u\in\mathbf{\bar{u}}}u)}
-  {\sqrt{\prod_{u\in\mathbf{\bar{u}}}(1-u^2/4) }}
-  \,\mathrm{d}\mathbf{\bar{u}}
+  \frac{\delta(\Lambda_M+\sum_{u\in\bar{\mathbf{u}}}u)}
+  {\sqrt{\prod_{u\in\bar{\mathbf{u}}}(1-u^2/4) }}
+  \,\mathrm{d}\bar{\mathbf{u}}
   \qquad
   \begin{matrix}
     \Lambda_M=\lambda+2M \\
